styles/Home.module.css
.main {
  display: flex;
  height: 100vh;
  align-items: center;
}

.main .videoWrapper {
  position: fixed;
  height: 100%;
  width: 100%;
}

.main .videoWrapper video {
  object-fit: cover;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.main h1 {
  color: rgb(243, 155, 55);
  flex-grow: 1;
  font-family: 'GroovyScript';
  font-weight: 300;
  font-size: 12rem;
  text-align: center;
  z-index: 1;
}

.main h1 a {
  color: rgb(243, 155, 55);
}

@media (max-width: 800px) {
  .main h1 {
    font-size: 4.5rem;
    font-weight: 300;
    height: 120px;
    line-height: 125px;
    margin: 0 0 0 45px;
    width: 200px;
    z-index: 1;
  }
}

